--- a/src/styles/users/styles.scss
+++ b/src/styles/users/styles.scss
@@ -208,7 +208,6 @@ a {
   .drawer_item{
     width: 100%;
     @include flexDisplay(flex-start, center, row);
-    gap: 10px;
     padding: 10px;
     font-weight: 300;
     font-size: 15px;
@@ -220,6 +219,7 @@ a {
     }
     svg{
       font-size: 20px;
+      margin-right: 10px;
     }
   }
 }
